--- a/playbook.yml
+++ b/playbook.yml
@@ -7,4 +7,6 @@
   #- install_rpm_package
   #- install_fonts
   #- k8s_client_components
-  - install_pip_package
+  #- install_pip_package
+  #- awscli
+  - pyenv
