--- a/roles/install_rpm_with_key/tasks/main.yml
+++ b/roles/install_rpm_with_key/tasks/main.yml
@@ -6,7 +6,7 @@
     fingerprint: "{{ rpm_key_fingerprint }}"
   become: yes
 
-- name: install rpm repo
+- name: install rpm
   dnf:
     name: '{{ rpm_package }}'
     state: present
