extract completion to ~/.bash_completion.d/

--- a/playbook.yml
+++ b/playbook.yml
@@ -12,7 +12,8 @@
   #- docker
   #- hashicorp_client
   #- keybase
-  #- nvidia_driver
   #- chrome
+  #- tpm
   #- install_mystartup
   #- install_desktop
+  #- nvidia_driver
