--- a/roles/k8s_client_components/tasks/kustomize.yml
+++ b/roles/k8s_client_components/tasks/kustomize.yml
@@ -7,3 +7,6 @@
     checksum: sha256:220dd03dcda8e45dc50e4e42b2d71882cbc4c05e0ed863513e67930ecad939eb
     from_path: kustomize
     to_path: ~/.local/bin/
+
+- name: export kustomize bash completion
+  command: bash -c 'kustomize completion bash > ~/.bash_completion.d/kustomize.bash'
