--- a/roles/nvidia_driver/tasks/main.yml
+++ b/roles/nvidia_driver/tasks/main.yml
@@ -8,9 +8,12 @@
   become: yes
 
 # fix xorg with intel stutter when disable laptops display
+- name: check if it x11 session
+  command: ./cmd/find_session_type.sh
+  register: reg
 - name: make nvidia as primary gpu
   copy:
     src: etc/X11/xorg.conf.d/10-nvidia.conf
     dest: /etc/X11/xorg.conf.d/10-nvidia.conf
-  when: ansible_env.XDG_SESSION_TYPE == 'x11'
+  when: reg.stdout == 'x11'
   become: yes
