use overlay2 instead btrfs
maybe bug or misconfig that make docker build so slow.

--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -13,3 +13,17 @@
 - name: add user to docker group
   command: usermod -aG docker "{{ ansible_user_id }}"
   become: yes
+- name: copy docker daemon config
+  copy:
+    src: etc/docker/daemon.json
+    dest: /etc/docker/daemon.json
+    mode: '0644'
+  become: yes
+- name: download docker credential helper
+  include_role:
+    name: download_and_extract
+  vars:
+    download_url: https://github.com/docker/docker-credential-helpers/releases/download/v0.6.4/docker-credential-secretservice-v0.6.4-amd64.tar.gz
+    checksum: sha256:dbf613a4ca63dbaca08298fe954ef1c616238956bd5b6e4f237a6c8f86ea5748
+    from_path: docker-credential-secretservice
+    to_path: ~/.local/bin
