add new package

--- a/host_vars/localhost/os_package.yml
+++ b/host_vars/localhost/os_package.yml
@@ -23,6 +23,10 @@ fedora_dnf_package:
 - remmina
 - virt-manager
 - libvirt
+- mpv
+- iperf3
+- gimp
+- wireshark
 # for emacs builds
 - autoconf
 - texinfo
