install python header, python-pip for init.sh scripts

--- a/roles/install_pip_package/tasks/main.yml
+++ b/roles/install_pip_package/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: install python header
+  tags: pip
+  include_tasks: '{{ ansible_distribution }}.yml'
 - name: install pip package
   tags: pip
   pip:
