--- a/roles/install_rpm_with_key/tasks/main.yml
+++ b/roles/install_rpm_with_key/tasks/main.yml
@@ -5,6 +5,7 @@
     key: "{{ rpm_key }}"
     fingerprint: "{{ rpm_key_fingerprint }}"
   become: yes
+  when: rpm_key is defined
 
 - name: install rpm
   dnf:
