--- a/host_vars/localhost/install_pip_package.yml
+++ b/host_vars/localhost/install_pip_package.yml
@@ -15,3 +15,9 @@ pip_package:
 - flake8
 - bandit
 - yamllint
+- PyYAML
+- pyyaml
+- wheel
+# cern
+- python-openstackclient==5.2.0
+- 'keystoneauth1[kerberos]'
