upload from another laptop

--- a/host_vars/localhost/dnf_package.yml
+++ b/host_vars/localhost/dnf_package.yml
@@ -49,6 +49,8 @@ fedora_package:
 - yarnpkg
 # cern
 - krb5-workstation
+## for install pip keystoneauth1[kerberos]
+- krb5-devel
 - thunderbird
 
 
