--- a/host_vars/localhost/flatpak_package.yml
+++ b/host_vars/localhost/flatpak_package.yml
@@ -5,3 +5,4 @@ flatpak_package:
 - com.bitwarden.desktop
 - com.mattermost.Desktop
 - com.nextcloud.desktopclient.nextcloud
+- io.dbeaver.DBeaverCommunity
