--- a/roles/pyenv/tasks/main.yml
+++ b/roles/pyenv/tasks/main.yml
@@ -5,8 +5,9 @@
   vars:
     download_url: https://github.com/pyenv/pyenv/archive/refs/tags/v2.3.1.tar.gz
     checksum: sha256:adf687597fc103180e6262667f8f3edaaacde298ee689de9bbdeed0f0b8e3efc
-    from_path: 'pyenv-2.3.1/'
-    to_path: '~/.local/share/pyenv'
+    path:
+      - src: 'pyenv-2.3.1/'
+        dest: '~/.local/share/pyenv'
 
 #- name: download pyenv-virtualenv
 #  include_role:
