--- a/roles/awscli/tasks/main.yml
+++ b/roles/awscli/tasks/main.yml
@@ -5,8 +5,9 @@
   vars:
     download_url: https://awscli.amazonaws.com/awscli-exe-linux-x86_64-2.2.21.zip
     checksum: sha256:3f3fb5e9da1265847e1238a259bac4c08b5c2388d955cc0a60c6b11cb7f31dce
-    from_path: 'aws'
-    to_path: '/tmp'
+    path:
+      - src: 'aws'
+        dest: '/tmp'
 
 - name: clean previous install directory
   file:
