--- a/roles/fd/tasks/main.yml
+++ b/roles/fd/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: downloads fd
   include_role:
-    name: download_and_extract_v2
+    name: download_and_extract
   vars:
     download_url: https://github.com/sharkdp/fd/releases/download/v8.4.0/fd-v8.4.0-x86_64-unknown-linux-gnu.tar.gz
     checksum: sha256:a1e72cf4f4fbd1b061387569678f3ab3555ee1cf025280b3ce6b2eee96cd3210
