--- a/roles/install_fonts/tasks/main.yml
+++ b/roles/install_fonts/tasks/main.yml
@@ -8,9 +8,11 @@
   include_role:
     name: download_and_extract
   vars:
-    download_url: https://www.fontsquirrel.com/fonts/download/liberation-mono
-    from_path: '*.ttf'
-    to_path: ~/.local/share/fonts/
+    download_url: https://github.com/liberationfonts/liberation-fonts/files/7261482/liberation-fonts-ttf-2.1.5.tar.gz
+    checksum: sha256:7191c669bf38899f73a2094ed00f7b800553364f90e2637010a69c0e268f25d0
+    path:
+      - src: 'liberation-fonts-ttf-2.1.5/*.ttf'
+        dest: ~/.local/share/fonts/
 
 - name: download all-the-icons fonts
   include_role:
@@ -18,8 +20,9 @@
   vars:
     download_url: https://github.com/domtronn/all-the-icons.el/archive/refs/tags/4.0.1.tar.gz
     checksum: sha256:30ac8a44efdf638e893b9f802cde3388da8776d39296dcc83694720ba74950d0
-    from_path: 'all-the-icons.el-4.0.1/fonts/*.ttf'
-    to_path: ~/.local/share/fonts
+    path:
+      - src: 'all-the-icons.el-4.0.1/fonts/*.ttf'
+        dest: ~/.local/share/fonts
 
 - name: refresh front cache
   command: fc-cache -v -f
