--- a/roles/k8s_client_components/tasks/kustomize.yml
+++ b/roles/k8s_client_components/tasks/kustomize.yml
@@ -5,8 +5,9 @@
   vars:
     download_url: https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv4.5.5/kustomize_v4.5.5_linux_amd64.tar.gz
     checksum: sha256:bba81aa61dba057db1d5abeddf1e522b568b2d906ab67a5c80935e97302c8773
-    from_path: kustomize
-    to_path: ~/.local/bin/
+    path:
+      - src: kustomize
+        dest: ~/.local/bin/
 
 - name: export kustomize bash completion
   command: bash -c 'kustomize completion bash > ~/.bash_completion.d/kustomize.bash'
