--- a/roles/tpm/tasks/main.yml
+++ b/roles/tpm/tasks/main.yml
@@ -5,5 +5,6 @@
   vars:
     download_url: https://github.com/tmux-plugins/tpm/archive/108f76b628a0df927df142036f1fdec829a5ff00.zip
     checksum: sha256:e327887f42552a8d4b0eab6fb86908834361fdd8223125639f3db618c3e48572
-    from_path: 'tpm-108f76b628a0df927df142036f1fdec829a5ff00/*'
-    to_path: ~/.local/share/tpm
+    path:
+      - src: '/tpm-108f76b628a0df927df142036f1fdec829a5ff00/*'
+        dest: ~/.local/share/tpm
