move os and npm package list to defaults

--- a/inventory/x1g2/group_vars/all/dnf_package.yml
+++ b/inventory/x1g2/group_vars/all/dnf_package.yml
@@ -1,61 +1,3 @@
-fedora_package:
-- tmux
-- gnome-tweaks
-- cowsay
-- zstd
-- the_silver_searcher
-- fd-find
-- fzf
-- wine
-- ncdu
-- autossh
-- xsel # for tmux copy yank to clipboard
-- inotify-tools
-- pv
-- age
-- dnf-plugin-system-upgrade
-- openssl
-- xset
-- golang-github-google-jsonnet
-- pandoc
-- ripgrep
-- jq
-- remmina
-- virt-manager
-- libvirt
-- iperf3
-- gimp
-- wireshark
-- texlive-pdfjam
-- strace
-- thunderbird
-- wireguard-tools
-# for emacs builds
-- autoconf
-- texinfo
-- gtk3-devel
-- webkit2gtk3-devel
-- libgccjit-devel
-- jansson-devel
-- giflib-devel
-- gnutls-devel
-- libXpm-devel
-- libjpeg-turbo-devel
-- ncurses-devel
-- jemalloc-devel
-- libtree-sitter-devel
-- xapps # require by emacs gui (get gtk error) when run in x11
-# computer language
-- ruby
-- golang
-- nodejs
-- npm
-- yarnpkg
-# cern
-- krb5-workstation
-## for install pip keystoneauth1[kerberos]
-- krb5-devel
+fedora_package: []
 
-rpmfusion_package:
-  - mpv
-  - vlc
+rpmfusion_package: []
