--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -27,8 +27,6 @@
     dest: /etc/docker/daemon.json
     mode: '0644'
   become: yes
-  notify:
-    - start docker
 - name: download docker credential helper
   include_role:
     name: download_and_extract
@@ -38,3 +36,10 @@
     path:
       - src: docker-credential-secretservice
         dest: ~/.local/bin
+
+- name: start docker
+  systemd:
+    name: docker
+    state: started
+    enabled: yes
+  become: yes
