--- a/roles/install_fonts/tasks/main.yml
+++ b/roles/install_fonts/tasks/main.yml
@@ -14,15 +14,16 @@
       - src: 'liberation-fonts-ttf-2.1.5/*.ttf'
         dest: ~/.local/share/fonts/
 
-- name: download all-the-icons fonts
+- name: download symbol nerd font
   include_role:
     name: download_and_extract
   vars:
-    download_url: https://github.com/domtronn/all-the-icons.el/archive/refs/tags/4.0.1.tar.gz
-    checksum: sha256:30ac8a44efdf638e893b9f802cde3388da8776d39296dcc83694720ba74950d0
+    download_url: https://github.com/ryanoasis/nerd-fonts/releases/download/v3.0.1/NerdFontsSymbolsOnly.zip
+    checksum: sha256:6dcde1ec4a321e1142a75075b527c046dc288b35d4e5f991285902c9a4c04ecb
     path:
-      - src: 'all-the-icons.el-4.0.1/fonts/*.ttf'
+      - src: '*.ttf'
         dest: ~/.local/share/fonts
+
 
 - name: refresh front cache
   command: fc-cache -v -f
