add install_npm_package to main playbook.yml and disable wine
due dependency conflict

--- a/roles/install_os_package/defaults/main.yml
+++ b/roles/install_os_package/defaults/main.yml
@@ -5,7 +5,7 @@ fedora_package_default:
 - zstd
 - the_silver_searcher
 - fzf
-- wine
+# - wine # dependency conflict with i686 version
 - ncdu
 - autossh
 - xsel # for tmux copy yank to clipboard
