--- a/roles/zoom/tasks/main.yml
+++ b/roles/zoom/tasks/main.yml
@@ -8,6 +8,6 @@
 
 - name: install zoom from rpm files (latest)
   dnf:
-    name: 'https://zoom.us/client/5.14.7.2928/zoom_x86_64.rpm'
+    name: 'https://cdn.zoom.us/prod/5.15.5.5603/zoom_x86_64.rpm'
     state: present
   become: yes
