--- a/roles/install_pacman_package/tasks/main.yml
+++ b/roles/install_pacman_package/tasks/main.yml
@@ -41,13 +41,13 @@
     create_home: yes
 
 - name: Allow the `aur_builder` user to run `sudo pacman` without a password
-  become: yes
   ansible.builtin.lineinfile:
     path: /etc/sudoers.d/11-install-aur_builder
     line: 'aur_builder ALL=(ALL) NOPASSWD: /usr/bin/pacman'
     create: yes
     mode: 0644
     validate: 'visudo -cf %s'
+  become: true
 
 - name: Install yay
   kewlfft.aur.aur:
