--- a/roles/install_pip_package/tasks/main.yml
+++ b/roles/install_pip_package/tasks/main.yml
@@ -9,4 +9,4 @@
   ansible.builtin.pip:
     name: "{{ pip_package_defaults + pip_packages }}"
     state: latest
-    extra_args: --user --break-system-packages
+    extra_args: --user # --break-system-packages
