put --break-system-packages back

--- a/roles/install_pip_package/tasks/main.yml
+++ b/roles/install_pip_package/tasks/main.yml
@@ -5,8 +5,9 @@
 - name: load vars depend on distribution
   include_vars: '../defaults/{{ ansible_distribution }}.yml'
 
+# note: --break-system-packages does not work with cloud image, worst, argument not found.
 - name: install pip package
   ansible.builtin.pip:
     name: "{{ pip_package_defaults + pip_packages }}"
     state: latest
-    extra_args: --user # --break-system-packages
+    extra_args: --user --break-system-packages
